[gd_scene load_steps=12 format=4 uid="uid://c122lq0v8glpu"]

[ext_resource type="FontFile" uid="uid://ldri87twec1q" path="res://Assets/Enchanted Land.otf" id="1_cmli7"]
[ext_resource type="Texture2D" uid="uid://dd64g5iycevoc" path="res://menus-and-interfaces/main_menu/title.png" id="2_22tds"]
[ext_resource type="Script" path="res://menus-and-interfaces/level_select/lvl_1_button.gd" id="3_2i6l8"]
[ext_resource type="Script" path="res://menus-and-interfaces/level_select/quitBtn2.gd" id="4_7yhbw"]
[ext_resource type="Texture2D" uid="uid://brgp8syyw3o2h" path="res://Assets/rogues.png" id="5_4pocv"]
[ext_resource type="Texture2D" uid="uid://bnkf66xv2cxwh" path="res://Assets/tiles.png" id="6_sdo0o"]

[sub_resource type="LabelSettings" id="LabelSettings_luch5"]
font = ExtResource("1_cmli7")
font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_2uf3r"]
font = ExtResource("1_cmli7")
font_size = 72

[sub_resource type="LabelSettings" id="LabelSettings_tre16"]
font = ExtResource("1_cmli7")
font_size = 72

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_if2b2"]
texture = ExtResource("6_sdo0o")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
0:18/0 = 0
1:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
0:20/0 = 0
1:20/0 = 0
0:21/0 = 0
1:21/0 = 0
0:22/0 = 0
1:22/0 = 0

[sub_resource type="TileSet" id="TileSet_qj60t"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_if2b2")

[node name="MarginContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -78.0
offset_top = -10.0
offset_right = 84.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Select Level"
label_settings = SubResource("LabelSettings_luch5")

[node name="Logo" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_22tds")
stretch_mode = 2

[node name="MenuOptions" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 25

[node name="Level 1" type="Label" parent="HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Level 1"
label_settings = SubResource("LabelSettings_2uf3r")

[node name="lvl1Button" type="Button" parent="HBoxContainer/VBoxContainer/MenuOptions/Level 1"]
layout_mode = 2
offset_left = -8.0
offset_top = 12.0
offset_right = 145.0
offset_bottom = 77.0
mouse_default_cursor_shape = 2
flat = true
script = ExtResource("3_2i6l8")

[node name="Quit" type="Label" parent="HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
text = "Quit
"
label_settings = SubResource("LabelSettings_tre16")

[node name="QuitButton2" type="Button" parent="HBoxContainer/VBoxContainer/MenuOptions/Quit"]
layout_mode = 0
offset_left = -5.0
offset_top = 14.0
offset_right = 98.0
offset_bottom = 72.0
mouse_default_cursor_shape = 2
flat = true
script = ExtResource("4_7yhbw")

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Sorcerer" type="Sprite2D" parent="HBoxContainer/CenterContainer"]
position = Vector2(477, 232)
scale = Vector2(11.1389, 13.0313)
texture = ExtResource("5_4pocv")
region_enabled = true
region_rect = Rect2(160.79, 127.901, 30.6173, 32.1975)

[node name="MainBG" type="TileMapLayer" parent="."]
show_behind_parent = true
tile_map_data = PackedByteArray("AAABAAAAAAAAAAsAAAABAAEAAAAAAAsAAAABAAIAAAAAAAsAAAABAAMAAAAAAAsAAAABAAQAAAAAAAsAAAABAAUAAAAAAAsAAAABAAYAAAAAAAsAAAABAAcAAAAAAAsAAAABAAgAAAAAAAsAAAABAAkAAAAAAAsAAAABAAoAAAAAAAsAAAABAAsAAAAAAAsAAAABAAwAAAAAAAsAAAABAA0AAAAAAAsAAAABAA4AAAAAAAsAAAABAA8AAAAAAAsAAAABABAAAAAAAAsAAAABABEAAAAAAAsAAAABABIAAAAAAAsAAAABABMAAAAAAAsAAAABABQAAAAAAAsAAAABABUAAAAAAAsAAAABABYAAAAAAAsAAAABABcAAAAAAAsAAAACAAAAAAAAAAsAAAACAAEAAAAAAAsAAAACAAIAAAAAAAsAAAACAAMAAAAAAAsAAAACAAQAAAAAAAsAAAACAAUAAAAAAAsAAAACAAYAAAAAAAsAAAACAAcAAAAAAAsAAAACAAgAAAAAAAsAAAACAAkAAAAAAAsAAAACAAoAAAAAAAsAAAACAAsAAAAAAAsAAAACAAwAAAAAAAsAAAACAA0AAAAAAAsAAAACAA4AAAAAAAsAAAACAA8AAAAAAAsAAAACABAAAAAAAAsAAAACABEAAAAAAAsAAAACABIAAAAAAAsAAAACABMAAAAAAAsAAAACABQAAAAAAAsAAAACABUAAAAAAAsAAAACABYAAAAAAAsAAAACABcAAAAAAAsAAAADAAAAAAAAAAsAAAADAAEAAAAAAAsAAAADAAIAAAAAAAsAAAADAAMAAAAAAAsAAAADAAQAAAAAAAsAAAADAAUAAAAAAAsAAAADAAYAAAAAAAsAAAADAAcAAAAAAAsAAAADAAgAAAAAAAsAAAADAAkAAAAAAAsAAAADAAoAAAAAAAsAAAADAAsAAAAAAAsAAAADAAwAAAAAAAsAAAADAA0AAAAAAAsAAAADAA4AAAAAAAsAAAADAA8AAAAAAAsAAAADABAAAAAAAAsAAAADABEAAAAAAAsAAAADABIAAAAAAAsAAAADABMAAAAAAAsAAAADABQAAAAAAAsAAAADABUAAAAAAAsAAAADABYAAAAAAAsAAAADABcAAAAAAAsAAAAEAAAAAAAAAAsAAAAEAAEAAAAAAAsAAAAEAAIAAAAAAAsAAAAEAAMAAAAAAAsAAAAEAAQAAAAAAAsAAAAEAAUAAAAAAAsAAAAEAAYAAAAAAAsAAAAEAAcAAAAAAAsAAAAEAAgAAAAAAAsAAAAEAAkAAAAAAAsAAAAEAAoAAAAAAAsAAAAEAAsAAAAAAAsAAAAEAAwAAAAAAAsAAAAEAA0AAAAAAAsAAAAEAA4AAAAAAAsAAAAEAA8AAAAAAAsAAAAEABAAAAAAAAsAAAAEABEAAAAAAAsAAAAEABIAAAAAAAsAAAAEABMAAAAAAAsAAAAEABQAAAAAAAsAAAAEABUAAAAAAAsAAAAEABYAAAAAAAsAAAAEABcAAAAAAAsAAAAFAAAAAAAAAAsAAAAFAAEAAAAAAAsAAAAFAAIAAAAAAAsAAAAFAAMAAAAAAAsAAAAFAAQAAAAAAAsAAAAFAAUAAAAAAAsAAAAFAAYAAAAAAAsAAAAFAAcAAAAAAAsAAAAFAAgAAAAAAAsAAAAFAAkAAAAAAAsAAAAFAAoAAAAAAAsAAAAFAAsAAAAAAAsAAAAFAAwAAAAAAAsAAAAFAA0AAAAAAAsAAAAFAA4AAAAAAAsAAAAFAA8AAAAAAAsAAAAFABAAAAAAAAsAAAAFABEAAAAAAAsAAAAFABIAAAAAAAsAAAAFABMAAAAAAAsAAAAFABQAAAAAAAsAAAAFABUAAAAAAAsAAAAFABYAAAAAAAsAAAAFABcAAAAAAAsAAAAGAAAAAAAAAAsAAAAGAAEAAAAAAAsAAAAGAAIAAAAAAAsAAAAGAAMAAAAAAAsAAAAGAAQAAAAAAAsAAAAGAAUAAAAAAAsAAAAGAAYAAAAAAAsAAAAGAAcAAAAAAAsAAAAGAAgAAAAAAAsAAAAGAAkAAAAAAAsAAAAGAAoAAAAAAAsAAAAGAAsAAAAAAAsAAAAGAAwAAAAAAAsAAAAGAA0AAAAAAAsAAAAGAA4AAAAAAAsAAAAGAA8AAAAAAAsAAAAGABAAAAAAAAsAAAAGABEAAAAAAAsAAAAGABIAAAAAAAsAAAAGABMAAAAAAAsAAAAGABQAAAAAAAsAAAAGABUAAAAAAAsAAAAGABYAAAAAAAsAAAAGABcAAAAAAAsAAAAHAAAAAAAAAAsAAAAHAAEAAAAAAAsAAAAHAAIAAAAAAAsAAAAHAAMAAAAAAAsAAAAHAAQAAAAAAAsAAAAHAAUAAAAAAAsAAAAHAAYAAAAAAAsAAAAHAAcAAAAAAAsAAAAHAAgAAAAAAAsAAAAHAAkAAAAAAAsAAAAHAAoAAAAAAAsAAAAHAAsAAAAAAAsAAAAHAAwAAAAAAAsAAAAHAA0AAAAAAAsAAAAHAA4AAAAAAAsAAAAHAA8AAAAAAAsAAAAHABAAAAAAAAsAAAAHABEAAAAAAAsAAAAHABIAAAAAAAsAAAAHABMAAAAAAAsAAAAHABQAAAAAAAsAAAAHABUAAAAAAAsAAAAHABYAAAAAAAsAAAAHABcAAAAAAAsAAAAIAAAAAAAAAAsAAAAIAAEAAAAAAAsAAAAIAAIAAAAAAAsAAAAIAAMAAAAAAAsAAAAIAAQAAAAAAAsAAAAIAAUAAAAAAAsAAAAIAAYAAAAAAAsAAAAIAAcAAAAAAAsAAAAIAAgAAAAAAAsAAAAIAAkAAAAAAAsAAAAIAAoAAAAAAAsAAAAIAAsAAAAAAAsAAAAIAAwAAAAAAAsAAAAIAA0AAAAAAAsAAAAIAA4AAAAAAAsAAAAIAA8AAAAAAAsAAAAIABAAAAAAAAsAAAAIABEAAAAAAAsAAAAIABIAAAAAAAsAAAAIABMAAAAAAAsAAAAIABQAAAAAAAsAAAAIABUAAAAAAAsAAAAIABYAAAAAAAsAAAAIABcAAAAAAAsAAAAJAAAAAAAAAAsAAAAJAAEAAAAAAAsAAAAJAAIAAAAAAAsAAAAJAAMAAAAAAAsAAAAJAAQAAAAAAAsAAAAJAAUAAAAAAAsAAAAJAAYAAAAAAAsAAAAJAAcAAAAAAAsAAAAJAAgAAAAAAAsAAAAJAAkAAAAAAAsAAAAJAAoAAAAAAAsAAAAJAAsAAAAAAAsAAAAJAAwAAAAAAAsAAAAJAA0AAAAAAAsAAAAJAA4AAAAAAAsAAAAJAA8AAAAAAAsAAAAJABAAAAAAAAsAAAAJABEAAAAAAAsAAAAJABIAAAAAAAsAAAAJABMAAAAAAAsAAAAJABQAAAAAAAsAAAAJABUAAAAAAAsAAAAJABYAAAAAAAsAAAAJABcAAAAAAAsAAAAKAAAAAAAAAAsAAAAKAAEAAAAAAAsAAAAKAAIAAAAAAAsAAAAKAAMAAAAAAAsAAAAKAAQAAAAAAAsAAAAKAAUAAAAAAAsAAAAKAAYAAAAAAAsAAAAKAAcAAAAAAAsAAAAKAAgAAAAAAAsAAAAKAAkAAAAAAAsAAAAKAAoAAAAAAAsAAAAKAAsAAAAAAAsAAAAKAAwAAAAAAAsAAAAKAA0AAAAAAAsAAAAKAA4AAAAAAAsAAAAKAA8AAAAAAAsAAAAKABAAAAAAAAsAAAAKABEAAAAAAAsAAAAKABIAAAAAAAsAAAAKABMAAAAAAAsAAAAKABQAAAAAAAsAAAAKABUAAAAAAAsAAAAKABYAAAAAAAsAAAAKABcAAAAAAAsAAAALAAAAAAAAAAsAAAALAAEAAAAAAAsAAAALAAIAAAAAAAsAAAALAAMAAAAAAAsAAAALAAQAAAAAAAsAAAALAAUAAAAAAAsAAAALAAYAAAAAAAsAAAALAAcAAAAAAAsAAAALAAgAAAAAAAsAAAALAAkAAAAAAAsAAAALAAoAAAAAAAsAAAALAAsAAAAAAAsAAAALAAwAAAAAAAsAAAALAA0AAAAAAAsAAAALAA4AAAAAAAsAAAALAA8AAAAAAAsAAAALABAAAAAAAAsAAAALABEAAAAAAAsAAAALABIAAAAAAAsAAAALABMAAAAAAAsAAAALABQAAAAAAAsAAAALABUAAAAAAAsAAAALABYAAAAAAAsAAAALABcAAAAAAAsAAAAMAAAAAAAAAAsAAAAMAAEAAAAAAAsAAAAMAAIAAAAAAAsAAAAMAAMAAAAAAAsAAAAMAAQAAAAAAAsAAAAMAAUAAAAAAAsAAAAMAAYAAAAAAAsAAAAMAAcAAAAAAAsAAAAMAAgAAAAAAAsAAAAMAAkAAAAAAAsAAAAMAAoAAAAAAAsAAAAMAAsAAAAAAAsAAAAMAAwAAAAAAAsAAAAMAA0AAAAAAAsAAAAMAA4AAAAAAAsAAAAMAA8AAAAAAAsAAAAMABAAAAAAAAsAAAAMABEAAAAAAAsAAAAMABIAAAAAAAsAAAAMABMAAAAAAAsAAAAMABQAAAAAAAsAAAAMABUAAAAAAAsAAAAMABYAAAAAAAsAAAAMABcAAAAAAAsAAAANAAAAAAAAAAsAAAANAAEAAAAAAAsAAAANAAIAAAAAAAsAAAANAAMAAAAAAAsAAAANAAQAAAAAAAsAAAANAAUAAAAAAAsAAAANAAYAAAAAAAsAAAANAAcAAAAAAAsAAAANAAgAAAAAAAsAAAANAAkAAAAAAAsAAAANAAoAAAAAAAsAAAANAAsAAAAAAAsAAAANAAwAAAAAAAsAAAANAA0AAAAAAAsAAAANAA4AAAAAAAsAAAANAA8AAAAAAAsAAAANABAAAAAAAAsAAAANABEAAAAAAAsAAAANABIAAAAAAAsAAAANABMAAAAAAAsAAAANABQAAAAAAAsAAAANABUAAAAAAAsAAAANABYAAAAAAAsAAAANABcAAAAAAAsAAAAOAAAAAAAAAAsAAAAOAAEAAAAAAAsAAAAOAAIAAAAAAAsAAAAOAAMAAAAAAAsAAAAOAAQAAAAAAAsAAAAOAAUAAAAAAAsAAAAOAAYAAAAAAAsAAAAOAAcAAAAAAAsAAAAOAAgAAAAAAAsAAAAOAAkAAAAAAAsAAAAOAAoAAAAAAAsAAAAOAAsAAAAAAAsAAAAOAAwAAAAAAAsAAAAOAA0AAAAAAAsAAAAOAA4AAAAAAAsAAAAOAA8AAAAAAAsAAAAOABAAAAAAAAsAAAAOABEAAAAAAAsAAAAOABIAAAAAAAsAAAAOABMAAAAAAAsAAAAOABQAAAAAAAsAAAAOABUAAAAAAAsAAAAOABYAAAAAAAsAAAAOABcAAAAAAAsAAAAPAAAAAAAAAAsAAAAPAAEAAAAAAAsAAAAPAAIAAAAAAAsAAAAPAAMAAAAAAAsAAAAPAAQAAAAAAAsAAAAPAAUAAAAAAAsAAAAPAAYAAAAAAAsAAAAPAAcAAAAAAAsAAAAPAAgAAAAAAAsAAAAPAAkAAAAAAAsAAAAPAAoAAAAAAAsAAAAPAAsAAAAAAAsAAAAPAAwAAAAAAAsAAAAPAA0AAAAAAAsAAAAPAA4AAAAAAAsAAAAPAA8AAAAAAAsAAAAPABAAAAAAAAsAAAAPABEAAAAAAAsAAAAPABIAAAAAAAsAAAAPABMAAAAAAAsAAAAPABQAAAAAAAsAAAAPABUAAAAAAAsAAAAPABYAAAAAAAsAAAAPABcAAAAAAAsAAAAQAAAAAAAAAAsAAAAQAAEAAAAAAAsAAAAQAAIAAAAAAAsAAAAQAAMAAAAAAAsAAAAQAAQAAAAAAAsAAAAQAAUAAAAAAAsAAAAQAAYAAAAAAAsAAAAQAAcAAAAAAAsAAAAQAAgAAAAAAAsAAAAQAAkAAAAAAAsAAAAQAAoAAAAAAAsAAAAQAAsAAAAAAAsAAAAQAAwAAAAAAAsAAAAQAA0AAAAAAAsAAAAQAA4AAAAAAAsAAAAQAA8AAAAAAAsAAAAQABAAAAAAAAsAAAAQABEAAAAAAAsAAAAQABIAAAAAAAsAAAAQABMAAAAAAAsAAAAQABQAAAAAAAsAAAAQABUAAAAAAAsAAAAQABYAAAAAAAsAAAAQABcAAAAAAAsAAAARAAAAAAAAAAsAAAARAAEAAAAAAAsAAAARAAIAAAAAAAsAAAARAAMAAAAAAAsAAAARAAQAAAAAAAsAAAARAAUAAAAAAAsAAAARAAYAAAAAAAsAAAARAAcAAAAAAAsAAAARAAgAAAAAAAsAAAARAAkAAAAAAAsAAAARAAoAAAAAAAsAAAARAAsAAAAAAAsAAAARAAwAAAAAAAsAAAARAA0AAAAAAAsAAAARAA4AAAAAAAsAAAARAA8AAAAAAAsAAAARABAAAAAAAAsAAAARABEAAAAAAAsAAAARABIAAAAAAAsAAAARABMAAAAAAAsAAAARABQAAAAAAAsAAAARABUAAAAAAAsAAAARABYAAAAAAAsAAAARABcAAAAAAAsAAAASAAAAAAAAAAsAAAASAAEAAAAAAAsAAAASAAIAAAAAAAsAAAASAAMAAAAAAAsAAAASAAQAAAAAAAsAAAASAAUAAAAAAAsAAAASAAYAAAAAAAsAAAASAAcAAAAAAAsAAAASAAgAAAAAAAsAAAASAAkAAAAAAAsAAAASAAoAAAAAAAsAAAASAAsAAAAAAAsAAAASAAwAAAAAAAsAAAASAA0AAAAAAAsAAAASAA4AAAAAAAsAAAASAA8AAAAAAAsAAAASABAAAAAAAAsAAAASABEAAAAAAAsAAAASABIAAAAAAAsAAAASABMAAAAAAAsAAAASABQAAAAAAAsAAAASABUAAAAAAAsAAAASABYAAAAAAAsAAAASABcAAAAAAAsAAAATAAAAAAAAAAsAAAATAAEAAAAAAAsAAAATAAIAAAAAAAsAAAATAAMAAAAAAAsAAAATAAQAAAAAAAsAAAATAAUAAAAAAAsAAAATAAYAAAAAAAsAAAATAAcAAAAAAAsAAAATAAgAAAAAAAsAAAATAAkAAAAAAAsAAAATAAoAAAAAAAsAAAATAAsAAAAAAAsAAAATAAwAAAAAAAsAAAATAA0AAAAAAAsAAAATAA4AAAAAAAsAAAATAA8AAAAAAAsAAAATABAAAAAAAAsAAAATABEAAAAAAAsAAAATABIAAAAAAAsAAAATABMAAAAAAAsAAAATABQAAAAAAAsAAAATABUAAAAAAAsAAAATABYAAAAAAAsAAAATABcAAAAAAAsAAAAUAAAAAAAAAAsAAAAUAAEAAAAAAAsAAAAUAAIAAAAAAAsAAAAUAAMAAAAAAAsAAAAUAAQAAAAAAAsAAAAUAAUAAAAAAAsAAAAUAAYAAAAAAAsAAAAUAAcAAAAAAAsAAAAUAAgAAAAAAAsAAAAUAAkAAAAAAAsAAAAUAAoAAAAAAAsAAAAUAAsAAAAAAAsAAAAUAAwAAAAAAAsAAAAUAA0AAAAAAAsAAAAUAA4AAAAAAAsAAAAUAA8AAAAAAAsAAAAUABAAAAAAAAsAAAAUABEAAAAAAAsAAAAUABIAAAAAAAsAAAAUABMAAAAAAAsAAAAUABQAAAAAAAsAAAAUABUAAAAAAAsAAAAUABYAAAAAAAsAAAAUABcAAAAAAAsAAAAVAAAAAAAAAAsAAAAVAAEAAAAAAAsAAAAVAAIAAAAAAAsAAAAVAAMAAAAAAAsAAAAVAAQAAAAAAAsAAAAVAAUAAAAAAAsAAAAVAAYAAAAAAAsAAAAVAAcAAAAAAAsAAAAVAAgAAAAAAAsAAAAVAAkAAAAAAAsAAAAVAAoAAAAAAAsAAAAVAAsAAAAAAAsAAAAVAAwAAAAAAAsAAAAVAA0AAAAAAAsAAAAVAA4AAAAAAAsAAAAVAA8AAAAAAAsAAAAVABAAAAAAAAsAAAAVABEAAAAAAAsAAAAVABIAAAAAAAsAAAAVABMAAAAAAAsAAAAVABQAAAAAAAsAAAAVABUAAAAAAAsAAAAVABYAAAAAAAsAAAAVABcAAAAAAAsAAAAWAAAAAAAAAAsAAAAWAAEAAAAAAAsAAAAWAAIAAAAAAAsAAAAWAAMAAAAAAAsAAAAWAAQAAAAAAAsAAAAWAAUAAAAAAAsAAAAWAAYAAAAAAAsAAAAWAAcAAAAAAAsAAAAWAAgAAAAAAAsAAAAWAAkAAAAAAAsAAAAWAAoAAAAAAAsAAAAWAAsAAAAAAAsAAAAWAAwAAAAAAAsAAAAWAA0AAAAAAAsAAAAWAA4AAAAAAAsAAAAWAA8AAAAAAAsAAAAWABAAAAAAAAsAAAAWABEAAAAAAAsAAAAWABIAAAAAAAsAAAAWABMAAAAAAAsAAAAWABQAAAAAAAsAAAAWABUAAAAAAAsAAAAWABYAAAAAAAsAAAAWABcAAAAAAAsAAAAXAAAAAAAAAAsAAAAXAAEAAAAAAAsAAAAXAAIAAAAAAAsAAAAXAAMAAAAAAAsAAAAXAAQAAAAAAAsAAAAXAAUAAAAAAAsAAAAXAAYAAAAAAAsAAAAXAAcAAAAAAAsAAAAXAAgAAAAAAAsAAAAXAAkAAAAAAAsAAAAXAAoAAAAAAAsAAAAXAAsAAAAAAAsAAAAXAAwAAAAAAAsAAAAXAA0AAAAAAAsAAAAXAA4AAAAAAAsAAAAXAA8AAAAAAAsAAAAXABAAAAAAAAsAAAAXABEAAAAAAAsAAAAXABIAAAAAAAsAAAAXABMAAAAAAAsAAAAXABQAAAAAAAsAAAAXABUAAAAAAAsAAAAXABYAAAAAAAsAAAAXABcAAAAAAAsAAAAYAAAAAAAAAAsAAAAYAAEAAAAAAAsAAAAYAAIAAAAAAAsAAAAYAAMAAAAAAAsAAAAYAAQAAAAAAAsAAAAYAAUAAAAAAAsAAAAYAAYAAAAAAAsAAAAYAAcAAAAAAAsAAAAYAAgAAAAAAAsAAAAYAAkAAAAAAAsAAAAYAAoAAAAAAAsAAAAYAAsAAAAAAAsAAAAYAAwAAAAAAAsAAAAYAA0AAAAAAAsAAAAYAA4AAAAAAAsAAAAYAA8AAAAAAAsAAAAYABAAAAAAAAsAAAAYABEAAAAAAAsAAAAYABIAAAAAAAsAAAAYABMAAAAAAAsAAAAYABQAAAAAAAsAAAAYABUAAAAAAAsAAAAYABYAAAAAAAsAAAAYABcAAAAAAAsAAAAZAAAAAAAAAAsAAAAZAAEAAAAAAAsAAAAZAAIAAAAAAAsAAAAZAAMAAAAAAAsAAAAZAAQAAAAAAAsAAAAZAAUAAAAAAAsAAAAZAAYAAAAAAAsAAAAZAAcAAAAAAAsAAAAZAAgAAAAAAAsAAAAZAAkAAAAAAAsAAAAZAAoAAAAAAAsAAAAZAAsAAAAAAAsAAAAZAAwAAAAAAAsAAAAZAA0AAAAAAAsAAAAZAA4AAAAAAAsAAAAZAA8AAAAAAAsAAAAZABAAAAAAAAsAAAAZABEAAAAAAAsAAAAZABIAAAAAAAsAAAAZABMAAAAAAAsAAAAZABQAAAAAAAsAAAAZABUAAAAAAAsAAAAZABYAAAAAAAsAAAAZABcAAAAAAAsAAAAaAAAAAAAAAAsAAAAaAAEAAAAAAAsAAAAaAAIAAAAAAAsAAAAaAAMAAAAAAAsAAAAaAAQAAAAAAAsAAAAaAAUAAAAAAAsAAAAaAAYAAAAAAAsAAAAaAAcAAAAAAAsAAAAaAAgAAAAAAAsAAAAaAAkAAAAAAAsAAAAaAAoAAAAAAAsAAAAaAAsAAAAAAAsAAAAaAAwAAAAAAAsAAAAaAA0AAAAAAAsAAAAaAA4AAAAAAAsAAAAaAA8AAAAAAAsAAAAaABAAAAAAAAsAAAAaABEAAAAAAAsAAAAaABIAAAAAAAsAAAAaABMAAAAAAAsAAAAaABQAAAAAAAsAAAAaABUAAAAAAAsAAAAaABYAAAAAAAsAAAAaABcAAAAAAAsAAAAbAAAAAAAAAAsAAAAbAAEAAAAAAAsAAAAbAAIAAAAAAAsAAAAbAAMAAAAAAAsAAAAbAAQAAAAAAAsAAAAbAAUAAAAAAAsAAAAbAAYAAAAAAAsAAAAbAAcAAAAAAAsAAAAbAAgAAAAAAAsAAAAbAAkAAAAAAAsAAAAbAAoAAAAAAAsAAAAbAAsAAAAAAAsAAAAbAAwAAAAAAAsAAAAbAA0AAAAAAAsAAAAbAA4AAAAAAAsAAAAbAA8AAAAAAAsAAAAbABAAAAAAAAsAAAAbABEAAAAAAAsAAAAbABIAAAAAAAsAAAAbABMAAAAAAAsAAAAbABQAAAAAAAsAAAAbABUAAAAAAAsAAAAbABYAAAAAAAsAAAAbABcAAAAAAAsAAAAcAAAAAAAAAAsAAAAcAAEAAAAAAAsAAAAcAAIAAAAAAAsAAAAcAAMAAAAAAAsAAAAcAAQAAAAAAAsAAAAcAAUAAAAAAAsAAAAcAAYAAAAAAAsAAAAcAAcAAAAAAAsAAAAcAAgAAAAAAAsAAAAcAAkAAAAAAAsAAAAcAAoAAAAAAAsAAAAcAAsAAAAAAAsAAAAcAAwAAAAAAAsAAAAcAA0AAAAAAAsAAAAcAA4AAAAAAAsAAAAcAA8AAAAAAAsAAAAcABAAAAAAAAsAAAAcABEAAAAAAAsAAAAcABIAAAAAAAsAAAAcABMAAAAAAAsAAAAcABQAAAAAAAsAAAAcABUAAAAAAAsAAAAcABYAAAAAAAsAAAAcABcAAAAAAAsAAAAdAAAAAAAAAAsAAAAdAAEAAAAAAAsAAAAdAAIAAAAAAAsAAAAdAAMAAAAAAAsAAAAdAAQAAAAAAAsAAAAdAAUAAAAAAAsAAAAdAAYAAAAAAAsAAAAdAAcAAAAAAAsAAAAdAAgAAAAAAAsAAAAdAAkAAAAAAAsAAAAdAAoAAAAAAAsAAAAdAAsAAAAAAAsAAAAdAAwAAAAAAAsAAAAdAA0AAAAAAAsAAAAdAA4AAAAAAAsAAAAdAA8AAAAAAAsAAAAdABAAAAAAAAsAAAAdABEAAAAAAAsAAAAdABIAAAAAAAsAAAAdABMAAAAAAAsAAAAdABQAAAAAAAsAAAAdABUAAAAAAAsAAAAdABYAAAAAAAsAAAAdABcAAAAAAAsAAAAeAAAAAAAAAAsAAAAeAAEAAAAAAAsAAAAeAAIAAAAAAAsAAAAeAAMAAAAAAAsAAAAeAAQAAAAAAAsAAAAeAAUAAAAAAAsAAAAeAAYAAAAAAAsAAAAeAAcAAAAAAAsAAAAeAAgAAAAAAAsAAAAeAAkAAAAAAAsAAAAeAAoAAAAAAAsAAAAeAAsAAAAAAAsAAAAeAAwAAAAAAAsAAAAeAA0AAAAAAAsAAAAeAA4AAAAAAAsAAAAeAA8AAAAAAAsAAAAeABAAAAAAAAsAAAAeABEAAAAAAAsAAAAeABIAAAAAAAsAAAAeABMAAAAAAAsAAAAeABQAAAAAAAsAAAAeABUAAAAAAAsAAAAeABYAAAAAAAsAAAAeABcAAAAAAAsAAAAfAAAAAAAAAAsAAAAfAAEAAAAAAAsAAAAfAAIAAAAAAAsAAAAfAAMAAAAAAAsAAAAfAAQAAAAAAAsAAAAfAAUAAAAAAAsAAAAfAAYAAAAAAAsAAAAfAAcAAAAAAAsAAAAfAAgAAAAAAAsAAAAfAAkAAAAAAAsAAAAfAAoAAAAAAAsAAAAfAAsAAAAAAAsAAAAfAAwAAAAAAAsAAAAfAA0AAAAAAAsAAAAfAA4AAAAAAAsAAAAfAA8AAAAAAAsAAAAfABAAAAAAAAsAAAAfABEAAAAAAAsAAAAfABIAAAAAAAsAAAAfABMAAAAAAAsAAAAfABQAAAAAAAsAAAAfABUAAAAAAAsAAAAfABYAAAAAAAsAAAAfABcAAAAAAAsAAAAgAAAAAAAAAAsAAAAgAAEAAAAAAAsAAAAgAAIAAAAAAAsAAAAgAAMAAAAAAAsAAAAgAAQAAAAAAAsAAAAgAAUAAAAAAAsAAAAgAAYAAAAAAAsAAAAgAAcAAAAAAAsAAAAgAAgAAAAAAAsAAAAgAAkAAAAAAAsAAAAgAAoAAAAAAAsAAAAgAAsAAAAAAAsAAAAgAAwAAAAAAAsAAAAgAA0AAAAAAAsAAAAgAA4AAAAAAAsAAAAgAA8AAAAAAAsAAAAgABAAAAAAAAsAAAAgABEAAAAAAAsAAAAgABIAAAAAAAsAAAAgABMAAAAAAAsAAAAgABQAAAAAAAsAAAAgABUAAAAAAAsAAAAgABYAAAAAAAsAAAAgABcAAAAAAAsAAAAhAAAAAAAAAAsAAAAhAAEAAAAAAAsAAAAhAAIAAAAAAAsAAAAhAAMAAAAAAAsAAAAhAAQAAAAAAAsAAAAhAAUAAAAAAAsAAAAhAAYAAAAAAAsAAAAhAAcAAAAAAAsAAAAhAAgAAAAAAAsAAAAhAAkAAAAAAAsAAAAhAAoAAAAAAAsAAAAhAAsAAAAAAAsAAAAhAAwAAAAAAAsAAAAhAA0AAAAAAAsAAAAhAA4AAAAAAAsAAAAhAA8AAAAAAAsAAAAhABAAAAAAAAsAAAAhABEAAAAAAAsAAAAhABIAAAAAAAsAAAAhABMAAAAAAAsAAAAhABQAAAAAAAsAAAAhABUAAAAAAAsAAAAhABYAAAAAAAsAAAAhABcAAAAAAAsAAAAiAAAAAAAAAAsAAAAiAAEAAAAAAAsAAAAiAAIAAAAAAAsAAAAiAAMAAAAAAAsAAAAiAAQAAAAAAAsAAAAiAAUAAAAAAAsAAAAiAAYAAAAAAAsAAAAiAAcAAAAAAAsAAAAiAAgAAAAAAAsAAAAiAAkAAAAAAAsAAAAiAAoAAAAAAAsAAAAiAAsAAAAAAAsAAAAiAAwAAAAAAAsAAAAiAA0AAAAAAAsAAAAiAA4AAAAAAAsAAAAiAA8AAAAAAAsAAAAiABAAAAAAAAsAAAAiABEAAAAAAAsAAAAiABIAAAAAAAsAAAAiABMAAAAAAAsAAAAiABQAAAAAAAsAAAAiABUAAAAAAAsAAAAiABYAAAAAAAsAAAAiABcAAAAAAAsAAAAjAAAAAAAAAAsAAAAjAAEAAAAAAAsAAAAjAAIAAAAAAAsAAAAjAAMAAAAAAAsAAAAjAAQAAAAAAAsAAAAjAAUAAAAAAAsAAAAjAAYAAAAAAAsAAAAjAAcAAAAAAAsAAAAjAAgAAAAAAAsAAAAjAAkAAAAAAAsAAAAjAAoAAAAAAAsAAAAjAAsAAAAAAAsAAAAjAAwAAAAAAAsAAAAjAA0AAAAAAAsAAAAjAA4AAAAAAAsAAAAjAA8AAAAAAAsAAAAjABAAAAAAAAsAAAAjABEAAAAAAAsAAAAjABIAAAAAAAsAAAAjABMAAAAAAAsAAAAjABQAAAAAAAsAAAAjABUAAAAAAAsAAAAjABYAAAAAAAsAAAAjABcAAAAAAAsAAAAkAAAAAAAAAAsAAAAkAAEAAAAAAAsAAAAkAAIAAAAAAAsAAAAkAAMAAAAAAAsAAAAkAAQAAAAAAAsAAAAkAAUAAAAAAAsAAAAkAAYAAAAAAAsAAAAkAAcAAAAAAAsAAAAkAAgAAAAAAAsAAAAkAAkAAAAAAAsAAAAkAAoAAAAAAAsAAAAkAAsAAAAAAAsAAAAkAAwAAAAAAAsAAAAkAA0AAAAAAAsAAAAkAA4AAAAAAAsAAAAkAA8AAAAAAAsAAAAkABAAAAAAAAsAAAAkABEAAAAAAAsAAAAkABIAAAAAAAsAAAAkABMAAAAAAAsAAAAkABQAAAAAAAsAAAAkABUAAAAAAAsAAAAkABYAAAAAAAsAAAAkABcAAAAAAAsAAAAlAAAAAAAAAAsAAAAlAAEAAAAAAAsAAAAlAAIAAAAAAAsAAAAlAAMAAAAAAAsAAAAlAAQAAAAAAAsAAAAlAAUAAAAAAAsAAAAlAAYAAAAAAAsAAAAlAAcAAAAAAAsAAAAlAAgAAAAAAAsAAAAlAAkAAAAAAAsAAAAlAAoAAAAAAAsAAAAlAAsAAAAAAAsAAAAlAAwAAAAAAAsAAAAlAA0AAAAAAAsAAAAlAA4AAAAAAAsAAAAlAA8AAAAAAAsAAAAlABAAAAAAAAsAAAAlABEAAAAAAAsAAAAlABIAAAAAAAsAAAAlABMAAAAAAAsAAAAlABQAAAAAAAsAAAAlABUAAAAAAAsAAAAlABYAAAAAAAsAAAAlABcAAAAAAAsAAAAmAAAAAAAAAAsAAAAmAAEAAAAAAAsAAAAmAAIAAAAAAAsAAAAmAAMAAAAAAAsAAAAmAAQAAAAAAAsAAAAmAAUAAAAAAAsAAAAmAAYAAAAAAAsAAAAmAAcAAAAAAAsAAAAmAAgAAAAAAAsAAAAmAAkAAAAAAAsAAAAmAAoAAAAAAAsAAAAmAAsAAAAAAAsAAAAmAAwAAAAAAAsAAAAmAA0AAAAAAAsAAAAmAA4AAAAAAAsAAAAmAA8AAAAAAAsAAAAmABAAAAAAAAsAAAAmABEAAAAAAAsAAAAmABIAAAAAAAsAAAAmABMAAAAAAAsAAAAmABQAAAAAAAsAAAAmABUAAAAAAAsAAAAmABYAAAAAAAsAAAAmABcAAAAAAAsAAAAnAAAAAAAAAAsAAAAnAAEAAAAAAAsAAAAnAAIAAAAAAAsAAAAnAAMAAAAAAAsAAAAnAAQAAAAAAAsAAAAnAAUAAAAAAAsAAAAnAAYAAAAAAAsAAAAnAAcAAAAAAAsAAAAnAAgAAAAAAAsAAAAnAAkAAAAAAAsAAAAnAAoAAAAAAAsAAAAnAAsAAAAAAAsAAAAnAAwAAAAAAAsAAAAnAA0AAAAAAAsAAAAnAA4AAAAAAAsAAAAnAA8AAAAAAAsAAAAnABAAAAAAAAsAAAAnABEAAAAAAAsAAAAnABIAAAAAAAsAAAAnABMAAAAAAAsAAAAnABQAAAAAAAsAAAAnABUAAAAAAAsAAAAnABYAAAAAAAsAAAAnABcAAAAAAAsAAAAoAAAAAAAAAAsAAAAoAAEAAAAAAAsAAAAoAAIAAAAAAAsAAAAoAAMAAAAAAAsAAAAoAAQAAAAAAAsAAAAoAAUAAAAAAAsAAAAoAAYAAAAAAAsAAAAoAAcAAAAAAAsAAAAoAAgAAAAAAAsAAAAoAAkAAAAAAAsAAAAoAAoAAAAAAAsAAAAoAAsAAAAAAAsAAAAoAAwAAAAAAAsAAAAoAA0AAAAAAAsAAAAoAA4AAAAAAAsAAAAoAA8AAAAAAAsAAAAoABAAAAAAAAsAAAAoABEAAAAAAAsAAAAoABIAAAAAAAsAAAAoABMAAAAAAAsAAAAoABQAAAAAAAsAAAAoABUAAAAAAAsAAAAoABYAAAAAAAsAAAAoABcAAAAAAAsAAAApAAAAAAAAAAsAAAApAAEAAAAAAAsAAAApAAIAAAAAAAsAAAApAAMAAAAAAAsAAAApAAQAAAAAAAsAAAApAAUAAAAAAAsAAAApAAYAAAAAAAsAAAApAAcAAAAAAAsAAAApAAgAAAAAAAsAAAApAAkAAAAAAAsAAAApAAoAAAAAAAsAAAApAAsAAAAAAAsAAAApAAwAAAAAAAsAAAApAA0AAAAAAAsAAAApAA4AAAAAAAsAAAApAA8AAAAAAAsAAAApABAAAAAAAAsAAAApABEAAAAAAAsAAAApABIAAAAAAAsAAAApABMAAAAAAAsAAAApABQAAAAAAAsAAAApABUAAAAAAAsAAAApABYAAAAAAAsAAAApABcAAAAAAAsAAAAqAAAAAAAAAAsAAAAqAAEAAAAAAAsAAAAqAAIAAAAAAAsAAAAqAAMAAAAAAAsAAAAqAAQAAAAAAAsAAAAqAAUAAAAAAAsAAAAqAAYAAAAAAAsAAAAqAAcAAAAAAAsAAAAqAAgAAAAAAAsAAAAqAAkAAAAAAAsAAAAqAAoAAAAAAAsAAAAqAAsAAAAAAAsAAAAqAAwAAAAAAAsAAAAqAA0AAAAAAAsAAAAqAA4AAAAAAAsAAAAqAA8AAAAAAAsAAAAqABAAAAAAAAsAAAAqABEAAAAAAAsAAAAqABIAAAAAAAsAAAAqABMAAAAAAAsAAAAqABQAAAAAAAsAAAAqABUAAAAAAAsAAAAqABYAAAAAAAsAAAAqABcAAAAAAAsAAAArAAAAAAAAAAsAAAArAAEAAAAAAAsAAAArAAIAAAAAAAsAAAArAAMAAAAAAAsAAAArAAQAAAAAAAsAAAArAAUAAAAAAAsAAAArAAYAAAAAAAsAAAArAAcAAAAAAAsAAAArAAgAAAAAAAsAAAArAAkAAAAAAAsAAAArAAoAAAAAAAsAAAArAAsAAAAAAAsAAAArAAwAAAAAAAsAAAArAA0AAAAAAAsAAAArAA4AAAAAAAsAAAArAA8AAAAAAAsAAAArABAAAAAAAAsAAAArABEAAAAAAAsAAAArABIAAAAAAAsAAAArABMAAAAAAAsAAAArABQAAAAAAAsAAAArABUAAAAAAAsAAAArABYAAAAAAAsAAAArABcAAAAAAAsAAAA=")
tile_set = SubResource("TileSet_qj60t")

[node name="BGExtras" type="TileMapLayer" parent="."]
show_behind_parent = true
tile_map_data = PackedByteArray("AAASABIAAAAFAAYAAAAMABEAAAAFAAYAAAAJABQAAAAFAAYAAAAOAA4AAAAFAAYAAAASAAkAAAAFAAYAAAAQAAcAAAAFAAYAAAAQAAYAAAAFAAYAAAARAAYAAAAFAAYAAAAXAAMAAAAFAAYAAAAYAAMAAAAFAAYAAAAjAAMAAAAFAAYAAAAmAAkAAAAFAAYAAAAmABIAAAAFAAYAAAAgABUAAAAFAAYAAAAXABIAAAAFAAYAAAAEABQAAAAFAAYAAAADABEAAAAFAAYAAAAPABUAAAAFAAgAAAAGABAAAAAFAAgAAAAKAAsAAAAFAAgAAAARAAUAAAAFAAgAAAAMAAUAAAAFAAgAAAALAAUAAAAFAAgAAAAHAAQAAAAFAAgAAAAFAAIAAAAFAAgAAAADAAQAAAAFAAgAAAACAAYAAAAFAAgAAAAJAAIAAAAFAAgAAAAKAAIAAAAFAAgAAAAjAAQAAAAFAAgAAAAgAAcAAAAFAAgAAAAiAAwAAAAFAAgAAAAmAAcAAAAFAAgAAAAmAAQAAAAFAAgAAAAXABQAAAAFAAsAAAAcABMAAAAFAAsAAAATABUAAAAFAAsAAAAQABEAAAAFAAsAAAAVAA8AAAAFAAsAAAAjABMAAAAFAAsAAAAlAAsAAAAFAAsAAAAhAAsAAAAFAAsAAAAhAAoAAAAFAAsAAAAjAAYAAAAFAAsAAAAcAAMAAAAFAAsAAAAUAAIAAAAFAAsAAAAUAAUAAAAFAAsAAAAXAAYAAAAFAAsAAAAQAA0AAAAFAAsAAAALABAAAAAFAAsAAAAGABEAAAAFAAsAAAADABQAAAAFAAsAAAAOABMAAAAGAAoAAAAKAA0AAAAGAAoAAAAPAAoAAAAGAAoAAAACABAAAAAGAAoAAAAMAAYAAAAGAAoAAAAjAAgAAAAGAAoAAAAeAAQAAAAGAAoAAAAeAAEAAAAGAAoAAAA=")
tile_set = SubResource("TileSet_qj60t")

[node name="Level1BtnBG" type="TileMapLayer" parent="."]
visible = false
show_behind_parent = true
tile_map_data = PackedByteArray("AAADAAoAAAAGAAsAAAADAAsAAAAGAAsAAAADAAwAAAAGAAsAAAAEAAoAAAAGAAsAAAAEAAsAAAAGAAsAAAAEAAwAAAAGAAsAAAAFAAoAAAAGAAsAAAAFAAsAAAAGAAsAAAAFAAwAAAAGAAsAAAAGAAoAAAAGAAsAAAAGAAsAAAAGAAsAAAAGAAwAAAAGAAsAAAAHAAoAAAAGAAsAAAAHAAsAAAAGAAsAAAAHAAwAAAAGAAsAAAAIAAoAAAAGAAsAAAAIAAsAAAAGAAsAAAAIAAwAAAAGAAsAAAA=")
tile_set = SubResource("TileSet_qj60t")

[node name="QuitBtn2BG" type="TileMapLayer" parent="."]
visible = false
show_behind_parent = true
tile_map_data = PackedByteArray("AAADAA4AAAAGAAsAAAADAA8AAAAGAAsAAAAEAA4AAAAGAAsAAAAEAA8AAAAGAAsAAAAFAA4AAAAGAAsAAAAFAA8AAAAGAAsAAAAGAA4AAAAGAAsAAAAGAA8AAAAGAAsAAAAHAA4AAAAGAAsAAAAHAA8AAAAGAAsAAAA=")
tile_set = SubResource("TileSet_qj60t")

[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/MenuOptions/Level 1/lvl1Button" to="HBoxContainer/VBoxContainer/MenuOptions/Level 1/lvl1Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/MenuOptions/Level 1/lvl1Button" to="HBoxContainer/VBoxContainer/MenuOptions/Level 1/lvl1Button" method="_on_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/Level 1/lvl1Button" to="HBoxContainer/VBoxContainer/MenuOptions/Level 1/lvl1Button" method="_on_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/MenuOptions/Quit/QuitButton2" to="HBoxContainer/VBoxContainer/MenuOptions/Quit/QuitButton2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/MenuOptions/Quit/QuitButton2" to="HBoxContainer/VBoxContainer/MenuOptions/Quit/QuitButton2" method="_on_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/Quit/QuitButton2" to="HBoxContainer/VBoxContainer/MenuOptions/Quit/QuitButton2" method="_on_pressed"]
